# Agentic-Fraud-Detection-System-

./: .gitignore  Cogniverse_Documentation.docx  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  documentation.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_service.py  train.py  transactions_logs.json
backend/agents/: __init__.py  behavior_agent.py  geo_agent.py  graph_agent.py  synthesis_agent.py  velocity_agent.py
backend/app/: db_schema.py  demo_profiles.py  deps.py  main.py  state_projector.py
backend/behavior_agent/: README.md  api.py  artifacts.py  build_calibration.py  config.py  config.yaml  ensemble.py  input_builders.py  load_reference_tables.py  lstm_arch.py  scorers.py
backend/eval/: EDA_REPORT.md  __init__.py  metrics.py  mlflow_tracking.py  offline_validation.ipynb  offline_validation.py  paths.py  run_offline_validation.py
backend/feature_engineering/: README.md  __init__.py  config.py  db.py  feature_config.yaml  geo_features.py  geo_math.py  monitoring.py  nightly_baseline_job.py  redis_client.py  run_batch_pipeline.py  transaction_features.py  validate_features.py  velocity_features.py
backend/kafka_bus/: __init__.py  config.py  events.py  orchestrator.py  producer.py
backend/ml/: README.md
backend/models/: behavior_score_calibration.json  isolation_forest_feature_list.json  model_feature_list.json  xgboost_behavior.json
backend/notebooks/: isolation_forest_transactions_raw.ipynb  lstm_fraud_detection.ipynb  offline_validation.ipynb  xgboost_behavior_classifier.ipynb
docker/: .env.example  (+6 more)
(+230 files in other folders)
